# imobflow

./: .env.example  .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
ai-engine/: Dockerfile  pyproject.toml
ai-engine/src/: __init__.py  main.py  worker.py
ai-engine/src/api/: analysis_router.py  chat_router.py  document_router.py  match_router.py
ai-engine/src/config/: settings.py
ai-engine/tests/: test_match.py
ai/rules/: coding-standards.md
ai/skills/: multi-tenant-skill.md
backend/: pom.xml
backend/src/main/java/com/imobflow/: ImobFlowApplication.java
backend/src/main/java/com/imobflow/customer/controller/: CustomerController.java
backend/src/main/java/com/imobflow/customer/dto/: CreateCustomerDTO.java  (+1 more)
backend/src/main/java/com/imobflow/identity/: TenantContext.java  TenantFilter.java  TenantInterceptor.java
backend/src/main/resources/: application.yml
backend/src/main/resources/db/migration/: V10__seed_wfj_and_jardim_romano.sql  V11__seed_felipe_purchase_journey.sql  V1__create_tenants.sql  V2__create_users.sql  V3__create_customers.sql  V4__create_properties.sql  V5__create_journeys_and_timeline.sql  V6__create_proposals_and_documents.sql  V7__create_finance_notifications_audit.sql  V8__seed_tenants_and_brokers.sql  V9__force_rls_all_tables.sql
docs/adr/: 001-monolith-modular.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: api.ts
infra/: docker-compose.dev.yml
infra/backup/: backup_imobflow.sql  backup_infrastructure.sql
infra/postgres/: init-db.sh
(+46 files in other folders)
