[tool.poetry]
name = "imobflow-ai-engine"
version = "0.1.0"
description = "AI Engine for ImobFlow — match, OCR, chatbot, analysis"
authors = ["ImobFlow Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pika = "^1.3.2"
boto3 = "^1.34.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
numpy = "^1.26.0"
structlog = "^25.5.0"
anthropic = "^0.49.0"
pillow = "^12.2.0"
pytesseract = "^0.3.10"
scikit-learn = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.5.0"
mypy = "^1.11.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["src/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
